[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Microsoft Corporation" },
]
keywords = ["markdown", "converter", "document", "text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
 "Textndependencies = [
    "ifulsoup4>=4.11",
    "requests>=
    "markify>=0.11.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
pdf = ["pdfminer.six>=20221105"]
docx = ["python-docx>=0.8.11"]
xlsx = ["openpyxl>=3.0.10"]
pptx = ["python-pptx>=0.6.21"]
audio = ["openai-whisper"]
all = [
    "pdfminer.six>=20221105",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
markitdown = "markitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/microsoft/markitdown"
Repository = "https://github.com/microsoft/markitdown"
Issues = "https://github.com/microsoft/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=markitdown --cov-report=term-missing"

[tool.coverage.run]
source = ["src/markitdown"]
omit = ["tests/*"]
